--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,82 +3,137 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@ARTICLE{2022ApJ...932...34C,
+       author = {{Cox}, Erin G. and {Novak}, Giles and {Sadavoy}, Sarah I. and {Looney}, Leslie W. and {Lee}, Dennis and {Berthoud}, Marc and {Bourke}, Tyler L. and {Coud{\'e}}, Simon and {Encalada}, Frankie and {Fissel}, Laura M. and {Harrison}, Rachel and {Houde}, Martin and {Li}, Zhi-Yun and {Myers}, Philip C. and {Pattle}, Kate and {Santos}, Fabio P. and {Stephens}, Ian W. and {Wang}, Hailin and {Wolf}, Sebastian},
+        title = "{The Twisted Magnetic Field of the Protobinary L483}",
+      journal = {\apj},
+     keywords = {Star formation, Protostars, Magnetic fields, 1569, 1302, 994, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Astrophysics of Galaxies},
+         year = 2022,
+        month = jun,
+       volume = {932},
+       number = {1},
+          eid = {34},
+        pages = {34},
+          doi = {10.3847/1538-4357/ac722a},
+archivePrefix = {arXiv},
+       eprint = {2206.00683},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022ApJ...932...34C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@ARTICLE{2021ApJ...918...39L,
+       author = {{Lee}, Dennis and {Berthoud}, Marc and {Chen}, Che-Yu and {Cox}, Erin G. and {Davidson}, Jacqueline A. and {Encalada}, Frankie J. and {Fissel}, Laura M. and {Harrison}, Rachel and {Kwon}, Woojin and {Li}, Di and {Li}, Zhi-Yun and {Looney}, Leslie W. and {Novak}, Giles and {Sadavoy}, Sarah and {Santos}, Fabio P. and {Segura-Cox}, Dominique and {Stephens}, Ian},
+        title = "{HAWC+/SOFIA Polarimetry in L1688: Relative Orientation of Magnetic Field and Elongated Cloud Structure}",
+      journal = {\apj},
+     keywords = {Star formation, Interstellar medium, Interstellar magnetic fields, Molecular clouds, Giant molecular clouds, 1569, 847, 845, 1072, 653, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Astrophysics of Galaxies},
+         year = 2021,
+        month = sep,
+       volume = {918},
+       number = {1},
+          eid = {39},
+        pages = {39},
+          doi = {10.3847/1538-4357/ac0cf2},
+archivePrefix = {arXiv},
+       eprint = {2106.13795},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021ApJ...918...39L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
+
+
+@INPROCEEDINGS{2022SPIE12190E..16L,
+       author = {{Lunde}, Emily and {Berthoud}, Marc and {DeNigris}, N.~S. and {Doyle}, Simon and {Ferrusca}, Daniel and {Golec}, Joseph E. and {Kuczarski}, Stephen and {Lee}, Dennis and {Ma}, Zhiyuan and {Mauskopf}, Philip and {McCrackan}, Michael and {McMahon}, Jeffrey and {Novak}, Giles and {Pisano}, Giampaolo and {Simon}, Sara and {Souccar}, Kamal and {Tucker}, Carole and {Underhill}, Matthew and {Van Camp}, Eric and {Wilson}, Grant W.},
+        title = "{The TolTEC camera: optical alignment and characterization}",
+    booktitle = {Millimeter, Submillimeter, and Far-Infrared Detectors and Instrumentation for Astronomy XI},
+         year = 2022,
+       editor = {{Zmuidzinas}, Jonas and {Gao}, Jian-Rong},
+       series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
+       volume = {12190},
+        month = aug,
+          eid = {1219016},
+        pages = {1219016},
+          doi = {10.1117/12.2630340},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022SPIE12190E..16L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@INPROCEEDINGS{2022SPIE12189E..1HM,
+       author = {{McCrackan}, Michael and {Ma}, Zhiyuan and {DeNigris}, Nat S. and {Ryan}, Caleigh and {Souccar}, Kamal and {Wilson}, Grant W. and {Aretxaga}, Itziar and {Bij}, Akanksha and {Fissel}, Laura and {Golec}, Joseph E. and {Gutermuth}, Robert and {Lee}, Dennis and {Novak}, Giles and {Thiel}, Felix and {Walker}, Samantha and {Zaragoza-Cardiel}, Javier},
+        title = "{The TolTEC camera: the citlali data reduction pipeline engine}",
+    booktitle = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
+         year = 2022,
+       series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
+       volume = {12189},
+        month = aug,
+          eid = {121891H},
+        pages = {121891H},
+          doi = {10.1117/12.2629095},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022SPIE12189E..1HM},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@INPROCEEDINGS{2022SPIE12190E..1OL,
+       author = {{Lee}, Dennis and {Novak}, Giles and {Berthoud}, Marc and {Bussan}, John and {Golenia}, Robert and {Van Clepper}, Eric and {Wilson}, Grant and {DeNigris}, N.~S. and {Ma}, Zhiyuan and {McCrackan}, Michael and {Souccar}, Kamal and {Fissel}, Laura and {Bij}, Akanksha and {Thiel}, Felix and {Aretxaga}, Itziar and {Ferrusca}, Daniel and {Mauskopf}, Philip and {Lunde}, Emily and {Ade}, Peter and {Tucker}, Carole and {Pisano}, Giampaolo and {Cox}, Erin G. and {Sabin}, Laurence and {Carrasco-Gonzalez}, Carlos and {Pasetto}, Alice and {G{\'o}mez-Ruiz}, Arturo and {Hull}, Chat and {Austermann}, Jason and {Beall}, James and {Gao}, Jiansong and {Vissers}, Michael},
+        title = "{The TolTEC camera: polarimetric commissioning and performance of the continuously rotating half-wave plate}",
+    booktitle = {Millimeter, Submillimeter, and Far-Infrared Detectors and Instrumentation for Astronomy XI},
+         year = 2022,
+       editor = {{Zmuidzinas}, Jonas and {Gao}, Jian-Rong},
+       series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
+       volume = {12190},
+        month = aug,
+          eid = {121901O},
+        pages = {121901O},
+          doi = {10.1117/12.2627725},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022SPIE12190E..1OL},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@INPROCEEDINGS{2020SPIE11452E..2OM,
+       author = {{Ma}, Zhiyuan and {McCrackan}, Michael and {DeNigris}, N.~S. and {Souccar}, Kamal and {Wilson}, Grant W. and {Horton}, Paul and {Lee}, Dennis and {Mauskopf}, Philip and {Novak}, Giles and {Rodr{\'\i}guez-Montoya}, Iv{\'a}n. and {Zaragoza-Cardiel}, Javier},
+        title = "{The TolTEC data analysis pipeline and software stack}",
+    booktitle = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
+         year = 2020,
+       series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
+       volume = {11452},
+        month = dec,
+          eid = {114522O},
+        pages = {114522O},
+          doi = {10.1117/12.2560735},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020SPIE11452E..2OM},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@INPROCEEDINGS{2020SPIE11453E..4AL,
+       author = {{Lunde}, Emily and {Ade}, Peter and {Berthoud}, Marc and {Contente}, Reid and {DeNigris}, N.~S. and {Doyle}, Simon and {Ferrusca}, Daniel and {Golec}, Joey and {Kuczarski}, Stephen and {Lee}, Dennis and {Ma}, Zhiyuan and {Mauskopf}, Philip and {McCrackan}, Michael and {McMahon}, Jeffrey and {Novak}, Giles and {Pisano}, Giampaolo and {Simon}, Sara and {Souccar}, Kamal and {Tucker}, Carole and {Underhill}, Matthew and {Van Camp}, Eric and {Wilson}, Grant},
+        title = "{The optical design and performance of TolTEC: a millimeter-wave imaging polarimeter}",
+    booktitle = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
+         year = 2020,
+       series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
+       volume = {11453},
+        month = dec,
+          eid = {114534A},
+        pages = {114534A},
+          doi = {10.1117/12.2562798},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020SPIE11453E..4AL},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@INPROCEEDINGS{2020SPIE11453E..02W,
+       author = {{Wilson}, Grant W. and {Abi-Saad}, Sophia and {Ade}, Peter and {Aretxaga}, Itziar and {Austermann}, Jason and {Ban}, Yvonne and {Bardin}, Joseph and {Beall}, James and {Berthoud}, Marc and {Bryan}, Sean and {Bussan}, John and {Castillo}, Edgar and {Chavez}, Miguel and {Contente}, Reid and {DeNigris}, N.~S. and {Dober}, Bradley and {Eiben}, Miranda and {Ferrusca}, Daniel and {Fissel}, Laura and {Gao}, Jiansong and {Golec}, Joseph E. and {Golina}, Robert and {Gomez}, Arturo and {Gordon}, Sam and {Gutermuth}, Robert and {Hilton}, Gene and {Hosseini}, Mohsen and {Hubmayr}, Johannes and {Hughes}, David and {Kuczarski}, Stephen and {Lee}, Dennis and {Lunde}, Emily and {Ma}, Zhiyuan and {Mani}, Hamdi and {Mauskopf}, Philip and {McCrackan}, Michael and {McKenney}, Christopher and {McMahon}, Jeffrey and {Novak}, Giles and {Pisano}, Giampaolo and {Pope}, Alexandra and {Ralston}, Amy and {Rodriguez}, Ivan and {S{\'a}nchez-Arg{\"u}elles}, David and {Schloerb}, F. Peter and {Simon}, Sara and {Sinclair}, Adrian and {Souccar}, Kamal and {Torres Campos}, Ana and {Tucker}, Carole and {Ullom}, Joel and {Van Camp}, Eric and {Van Lanen}, Jeff and {Velazquez}, Miguel and {Vissers}, Michael and {Weeks}, Eric and {Yun}, Min S.},
+        title = "{The TolTEC camera: an overview of the instrument and in-lab testing results}",
+    booktitle = {Millimeter, Submillimeter, and Far-Infrared Detectors and Instrumentation for Astronomy X},
+         year = 2020,
+       editor = {{Zmuidzinas}, Jonas and {Gao}, Jian-Rong},
+       series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
+       volume = {11453},
+        month = dec,
+          eid = {1145302},
+        pages = {1145302},
+          doi = {10.1117/12.2562331},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020SPIE11453E..02W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
