--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -136,4 +136,99 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@INPROCEEDINGS{2022SPIE12190E..16L,
+       author = {{Lunde}, Emily and {Berthoud}, Marc and {DeNigris}, N.~S. and {Doyle}, Simon and {Ferrusca}, Daniel and {Golec}, Joseph E. and {Kuczarski}, Stephen and {Lee}, Dennis and {Ma}, Zhiyuan and {Mauskopf}, Philip and {McCrackan}, Michael and {McMahon}, Jeffrey and {Novak}, Giles and {Pisano}, Giampaolo and {Simon}, Sara and {Souccar}, Kamal and {Tucker}, Carole and {Underhill}, Matthew and {Van Camp}, Eric and {Wilson}, Grant W.},
+        title = "{The TolTEC camera: optical alignment and characterization}",
+    booktitle = {Millimeter, Submillimeter, and Far-Infrared Detectors and Instrumentation for Astronomy XI},
+         year = 2022,
+       editor = {{Zmuidzinas}, Jonas and {Gao}, Jian-Rong},
+       series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
+       volume = {12190},
+        month = aug,
+          eid = {1219016},
+        pages = {1219016},
+          doi = {10.1117/12.2630340},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022SPIE12190E..16L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{2022SPIE12189E..1HM,
+       author = {{McCrackan}, Michael and {Ma}, Zhiyuan and {DeNigris}, Nat S. and {Ryan}, Caleigh and {Souccar}, Kamal and {Wilson}, Grant W. and {Aretxaga}, Itziar and {Bij}, Akanksha and {Fissel}, Laura and {Golec}, Joseph E. and {Gutermuth}, Robert and {Lee}, Dennis and {Novak}, Giles and {Thiel}, Felix and {Walker}, Samantha and {Zaragoza-Cardiel}, Javier},
+        title = "{The TolTEC camera: the citlali data reduction pipeline engine}",
+    booktitle = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
+         year = 2022,
+       series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
+       volume = {12189},
+        month = aug,
+          eid = {121891H},
+        pages = {121891H},
+          doi = {10.1117/12.2629095},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022SPIE12189E..1HM},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{2022SPIE12190E..1OL,
+       author = {{Lee}, Dennis and {Novak}, Giles and {Berthoud}, Marc and {Bussan}, John and {Golenia}, Robert and {Van Clepper}, Eric and {Wilson}, Grant and {DeNigris}, N.~S. and {Ma}, Zhiyuan and {McCrackan}, Michael and {Souccar}, Kamal and {Fissel}, Laura and {Bij}, Akanksha and {Thiel}, Felix and {Aretxaga}, Itziar and {Ferrusca}, Daniel and {Mauskopf}, Philip and {Lunde}, Emily and {Ade}, Peter and {Tucker}, Carole and {Pisano}, Giampaolo and {Cox}, Erin G. and {Sabin}, Laurence and {Carrasco-Gonzalez}, Carlos and {Pasetto}, Alice and {G{\'o}mez-Ruiz}, Arturo and {Hull}, Chat and {Austermann}, Jason and {Beall}, James and {Gao}, Jiansong and {Vissers}, Michael},
+        title = "{The TolTEC camera: polarimetric commissioning and performance of the continuously rotating half-wave plate}",
+    booktitle = {Millimeter, Submillimeter, and Far-Infrared Detectors and Instrumentation for Astronomy XI},
+         year = 2022,
+       editor = {{Zmuidzinas}, Jonas and {Gao}, Jian-Rong},
+       series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
+       volume = {12190},
+        month = aug,
+          eid = {121901O},
+        pages = {121901O},
+          doi = {10.1117/12.2627725},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022SPIE12190E..1OL},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{2020SPIE11452E..2OM,
+       author = {{Ma}, Zhiyuan and {McCrackan}, Michael and {DeNigris}, N.~S. and {Souccar}, Kamal and {Wilson}, Grant W. and {Horton}, Paul and {Lee}, Dennis and {Mauskopf}, Philip and {Novak}, Giles and {Rodr{\'\i}guez-Montoya}, Iv{\'a}n. and {Zaragoza-Cardiel}, Javier},
+        title = "{The TolTEC data analysis pipeline and software stack}",
+    booktitle = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
+         year = 2020,
+       series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
+       volume = {11452},
+        month = dec,
+          eid = {114522O},
+        pages = {114522O},
+          doi = {10.1117/12.2560735},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020SPIE11452E..2OM},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{2020SPIE11453E..4AL,
+       author = {{Lunde}, Emily and {Ade}, Peter and {Berthoud}, Marc and {Contente}, Reid and {DeNigris}, N.~S. and {Doyle}, Simon and {Ferrusca}, Daniel and {Golec}, Joey and {Kuczarski}, Stephen and {Lee}, Dennis and {Ma}, Zhiyuan and {Mauskopf}, Philip and {McCrackan}, Michael and {McMahon}, Jeffrey and {Novak}, Giles and {Pisano}, Giampaolo and {Simon}, Sara and {Souccar}, Kamal and {Tucker}, Carole and {Underhill}, Matthew and {Van Camp}, Eric and {Wilson}, Grant},
+        title = "{The optical design and performance of TolTEC: a millimeter-wave imaging polarimeter}",
+    booktitle = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
+         year = 2020,
+       series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
+       volume = {11453},
+        month = dec,
+          eid = {114534A},
+        pages = {114534A},
+          doi = {10.1117/12.2562798},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020SPIE11453E..4AL},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{2020SPIE11453E..02W,
+       author = {{Wilson}, Grant W. and {Abi-Saad}, Sophia and {Ade}, Peter and {Aretxaga}, Itziar and {Austermann}, Jason and {Ban}, Yvonne and {Bardin}, Joseph and {Beall}, James and {Berthoud}, Marc and {Bryan}, Sean and {Bussan}, John and {Castillo}, Edgar and {Chavez}, Miguel and {Contente}, Reid and {DeNigris}, N.~S. and {Dober}, Bradley and {Eiben}, Miranda and {Ferrusca}, Daniel and {Fissel}, Laura and {Gao}, Jiansong and {Golec}, Joseph E. and {Golina}, Robert and {Gomez}, Arturo and {Gordon}, Sam and {Gutermuth}, Robert and {Hilton}, Gene and {Hosseini}, Mohsen and {Hubmayr}, Johannes and {Hughes}, David and {Kuczarski}, Stephen and {Lee}, Dennis and {Lunde}, Emily and {Ma}, Zhiyuan and {Mani}, Hamdi and {Mauskopf}, Philip and {McCrackan}, Michael and {McKenney}, Christopher and {McMahon}, Jeffrey and {Novak}, Giles and {Pisano}, Giampaolo and {Pope}, Alexandra and {Ralston}, Amy and {Rodriguez}, Ivan and {S{\'a}nchez-Arg{\"u}elles}, David and {Schloerb}, F. Peter and {Simon}, Sara and {Sinclair}, Adrian and {Souccar}, Kamal and {Torres Campos}, Ana and {Tucker}, Carole and {Ullom}, Joel and {Van Camp}, Eric and {Van Lanen}, Jeff and {Velazquez}, Miguel and {Vissers}, Michael and {Weeks}, Eric and {Yun}, Min S.},
+        title = "{The TolTEC camera: an overview of the instrument and in-lab testing results}",
+    booktitle = {Millimeter, Submillimeter, and Far-Infrared Detectors and Instrumentation for Astronomy X},
+         year = 2020,
+       editor = {{Zmuidzinas}, Jonas and {Gao}, Jian-Rong},
+       series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
+       volume = {11453},
+        month = dec,
+          eid = {1145302},
+        pages = {1145302},
+          doi = {10.1117/12.2562331},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020SPIE11453E..02W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 
