--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,7 @@
 ---
 
 @string{aps = {American Physical Society,}}
+@string{apj = {Astrophysical Journal,}}
 
 @ARTICLE{2022ApJ...932...34C,
        author = {{Cox}, Erin G. and {Novak}, Giles and {Sadavoy}, Sarah I. and {Looney}, Leslie W. and {Lee}, Dennis and {Berthoud}, Marc and {Bourke}, Tyler L. and {Coud{\'e}}, Simon and {Encalada}, Frankie and {Fissel}, Laura M. and {Harrison}, Rachel and {Houde}, Martin and {Li}, Zhi-Yun and {Myers}, Philip C. and {Pattle}, Kate and {Santos}, Fabio P. and {Stephens}, Ian W. and {Wang}, Hailin and {Wolf}, Sebastian},
