--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,7 @@
 @ARTICLE{2022ApJ...932...34C,
        author = {{Cox}, Erin G. and {Novak}, Giles and {Sadavoy}, Sarah I. and {Looney}, Leslie W. and {Lee}, Dennis and {Berthoud}, Marc and {Bourke}, Tyler L. and {Coud{\'e}}, Simon and {Encalada}, Frankie and {Fissel}, Laura M. and {Harrison}, Rachel and {Houde}, Martin and {Li}, Zhi-Yun and {Myers}, Philip C. and {Pattle}, Kate and {Santos}, Fabio P. and {Stephens}, Ian W. and {Wang}, Hailin and {Wolf}, Sebastian},
         title = "{The Twisted Magnetic Field of the Protobinary L483}",
-      journal = {\apj},
+      journal = {The Astrophysical Journal},
      keywords = {Star formation, Protostars, Magnetic fields, 1569, 1302, 994, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Astrophysics of Galaxies},
          year = 2022,
         month = jun,
@@ -26,7 +26,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2021ApJ...918...39L,
        author = {{Lee}, Dennis and {Berthoud}, Marc and {Chen}, Che-Yu and {Cox}, Erin G. and {Davidson}, Jacqueline A. and {Encalada}, Frankie J. and {Fissel}, Laura M. and {Harrison}, Rachel and {Kwon}, Woojin and {Li}, Di and {Li}, Zhi-Yun and {Looney}, Leslie W. and {Novak}, Giles and {Sadavoy}, Sarah and {Santos}, Fabio P. and {Segura-Cox}, Dominique and {Stephens}, Ian},
         title = "{HAWC+/SOFIA Polarimetry in L1688: Relative Orientation of Magnetic Field and Elongated Cloud Structure}",
-      journal = {\apj},
+      journal = {The Astrophysical Journal},
      keywords = {Star formation, Interstellar medium, Interstellar magnetic fields, Molecular clouds, Giant molecular clouds, 1569, 847, 845, 1072, 653, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Astrophysics of Galaxies},
          year = 2021,
         month = sep,
