test compile + new paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,67 +4,29 @@
 @string{aps = {American Physical Society,}}
 @string{apj = {Astrophysical Journal,}}
 
-@ARTICLE{2022ApJ...932...34C,
-       author = {{Cox}, Erin G. and {Novak}, Giles and {Sadavoy}, Sarah I. and {Looney}, Leslie W. and {Lee}, Dennis and {Berthoud}, Marc and {Bourke}, Tyler L. and {Coud{\'e}}, Simon and {Encalada}, Frankie and {Fissel}, Laura M. and {Harrison}, Rachel and {Houde}, Martin and {Li}, Zhi-Yun and {Myers}, Philip C. and {Pattle}, Kate and {Santos}, Fabio P. and {Stephens}, Ian W. and {Wang}, Hailin and {Wolf}, Sebastian},
-        title = "{The Twisted Magnetic Field of the Protobinary L483}",
-      journal = {The Astrophysical Journal},
-     keywords = {Star formation, Protostars, Magnetic fields, 1569, 1302, 994, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Astrophysics of Galaxies},
-         year = 2022,
+@ARTICLE{2024ApJ...968..101E,
+       author = {{Encalada}, Frankie J. and {Looney}, Leslie W. and {Novak}, Giles and {Sadavoy}, Sarah and {Cox}, Erin G. and {Pereira-Santos}, Fabio and {Lee}, Dennis and {Harrison}, Rachel and {Pattle}, Kate},
+        title = "{Magnetic Fields Observed along the East{\textendash}West Outflow of IRAS 16293-2422}",
+      journal = {\apj},
+     keywords = {Young stellar objects, 1834, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Astrophysics of Galaxies},
+         year = 2024,
         month = jun,
-       volume = {932},
-       number = {1},
-          eid = {34},
-        pages = {34},
-          doi = {10.3847/1538-4357/ac722a},
+       volume = {968},
+       number = {2},
+          eid = {101},
+        pages = {101},
+          doi = {10.3847/1538-4357/ad4968},
 archivePrefix = {arXiv},
-       eprint = {2206.00683},
+       eprint = {2405.08118},
  primaryClass = {astro-ph.SR},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2022ApJ...932...34C},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-@ARTICLE{2021ApJ...918...39L,
-       author = {{Lee}, Dennis and {Berthoud}, Marc and {Chen}, Che-Yu and {Cox}, Erin G. and {Davidson}, Jacqueline A. and {Encalada}, Frankie J. and {Fissel}, Laura M. and {Harrison}, Rachel and {Kwon}, Woojin and {Li}, Di and {Li}, Zhi-Yun and {Looney}, Leslie W. and {Novak}, Giles and {Sadavoy}, Sarah and {Santos}, Fabio P. and {Segura-Cox}, Dominique and {Stephens}, Ian},
-        title = "{HAWC+/SOFIA Polarimetry in L1688: Relative Orientation of Magnetic Field and Elongated Cloud Structure}",
-      journal = {The Astrophysical Journal},
-     keywords = {Star formation, Interstellar medium, Interstellar magnetic fields, Molecular clouds, Giant molecular clouds, 1569, 847, 845, 1072, 653, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Astrophysics of Galaxies},
-         year = 2021,
-        month = sep,
-       volume = {918},
-       number = {1},
-          eid = {39},
-        pages = {39},
-          doi = {10.3847/1538-4357/ac0cf2},
-archivePrefix = {arXiv},
-       eprint = {2106.13795},
- primaryClass = {astro-ph.SR},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2021ApJ...918...39L},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System},
-       selected = {true}
-}
-
-
-
-@INPROCEEDINGS{2022SPIE12190E..16L,
-       author = {{Lunde}, Emily and {Berthoud}, Marc and {DeNigris}, N.~S. and {Doyle}, Simon and {Ferrusca}, Daniel and {Golec}, Joseph E. and {Kuczarski}, Stephen and {Lee}, Dennis and {Ma}, Zhiyuan and {Mauskopf}, Philip and {McCrackan}, Michael and {McMahon}, Jeffrey and {Novak}, Giles and {Pisano}, Giampaolo and {Simon}, Sara and {Souccar}, Kamal and {Tucker}, Carole and {Underhill}, Matthew and {Van Camp}, Eric and {Wilson}, Grant W.},
-        title = "{The TolTEC camera: optical alignment and characterization}",
-    booktitle = {Millimeter, Submillimeter, and Far-Infrared Detectors and Instrumentation for Astronomy XI},
-         year = 2022,
-       editor = {{Zmuidzinas}, Jonas and {Gao}, Jian-Rong},
-       series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
-       volume = {12190},
-        month = aug,
-          eid = {1219016},
-        pages = {1219016},
-          doi = {10.1117/12.2630340},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2022SPIE12190E..16L},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024ApJ...968..101E},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @INPROCEEDINGS{2022SPIE12189E..1HM,
        author = {{McCrackan}, Michael and {Ma}, Zhiyuan and {DeNigris}, Nat S. and {Ryan}, Caleigh and {Souccar}, Kamal and {Wilson}, Grant W. and {Aretxaga}, Itziar and {Bij}, Akanksha and {Fissel}, Laura and {Golec}, Joseph E. and {Gutermuth}, Robert and {Lee}, Dennis and {Novak}, Giles and {Thiel}, Felix and {Walker}, Samantha and {Zaragoza-Cardiel}, Javier},
         title = "{The TolTEC camera: the citlali data reduction pipeline engine}",
-    booktitle = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
+    booktitle = {Software and Cyberinfrastructure for Astronomy VII},
          year = 2022,
        series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
        volume = {12189},
@@ -92,33 +54,57 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@INPROCEEDINGS{2020SPIE11452E..2OM,
-       author = {{Ma}, Zhiyuan and {McCrackan}, Michael and {DeNigris}, N.~S. and {Souccar}, Kamal and {Wilson}, Grant W. and {Horton}, Paul and {Lee}, Dennis and {Mauskopf}, Philip and {Novak}, Giles and {Rodr{\'\i}guez-Montoya}, Iv{\'a}n. and {Zaragoza-Cardiel}, Javier},
-        title = "{The TolTEC data analysis pipeline and software stack}",
-    booktitle = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
-         year = 2020,
+@INPROCEEDINGS{2022SPIE12190E..16L,
+       author = {{Lunde}, Emily and {Berthoud}, Marc and {DeNigris}, N.~S. and {Doyle}, Simon and {Ferrusca}, Daniel and {Golec}, Joseph E. and {Kuczarski}, Stephen and {Lee}, Dennis and {Ma}, Zhiyuan and {Mauskopf}, Philip and {McCrackan}, Michael and {McMahon}, Jeffrey and {Novak}, Giles and {Pisano}, Giampaolo and {Simon}, Sara and {Souccar}, Kamal and {Tucker}, Carole and {Underhill}, Matthew and {Van Camp}, Eric and {Wilson}, Grant W.},
+        title = "{The TolTEC camera: optical alignment and characterization}",
+    booktitle = {Millimeter, Submillimeter, and Far-Infrared Detectors and Instrumentation for Astronomy XI},
+         year = 2022,
+       editor = {{Zmuidzinas}, Jonas and {Gao}, Jian-Rong},
        series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
-       volume = {11452},
-        month = dec,
-          eid = {114522O},
-        pages = {114522O},
-          doi = {10.1117/12.2560735},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2020SPIE11452E..2OM},
+       volume = {12190},
+        month = aug,
+          eid = {1219016},
+        pages = {1219016},
+          doi = {10.1117/12.2630340},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022SPIE12190E..16L},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@INPROCEEDINGS{2020SPIE11453E..4AL,
-       author = {{Lunde}, Emily and {Ade}, Peter and {Berthoud}, Marc and {Contente}, Reid and {DeNigris}, N.~S. and {Doyle}, Simon and {Ferrusca}, Daniel and {Golec}, Joey and {Kuczarski}, Stephen and {Lee}, Dennis and {Ma}, Zhiyuan and {Mauskopf}, Philip and {McCrackan}, Michael and {McMahon}, Jeffrey and {Novak}, Giles and {Pisano}, Giampaolo and {Simon}, Sara and {Souccar}, Kamal and {Tucker}, Carole and {Underhill}, Matthew and {Van Camp}, Eric and {Wilson}, Grant},
-        title = "{The optical design and performance of TolTEC: a millimeter-wave imaging polarimeter}",
-    booktitle = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
-         year = 2020,
-       series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
-       volume = {11453},
-        month = dec,
-          eid = {114534A},
-        pages = {114534A},
-          doi = {10.1117/12.2562798},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2020SPIE11453E..4AL},
+@ARTICLE{2022ApJ...932...34C,
+       author = {{Cox}, Erin G. and {Novak}, Giles and {Sadavoy}, Sarah I. and {Looney}, Leslie W. and {Lee}, Dennis and {Berthoud}, Marc and {Bourke}, Tyler L. and {Coud{\'e}}, Simon and {Encalada}, Frankie and {Fissel}, Laura M. and {Harrison}, Rachel and {Houde}, Martin and {Li}, Zhi-Yun and {Myers}, Philip C. and {Pattle}, Kate and {Santos}, Fabio P. and {Stephens}, Ian W. and {Wang}, Hailin and {Wolf}, Sebastian},
+        title = "{The Twisted Magnetic Field of the Protobinary L483}",
+      journal = {\apj},
+     keywords = {Star formation, Protostars, Magnetic fields, 1569, 1302, 994, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Astrophysics of Galaxies},
+         year = 2022,
+        month = jun,
+       volume = {932},
+       number = {1},
+          eid = {34},
+        pages = {34},
+          doi = {10.3847/1538-4357/ac722a},
+archivePrefix = {arXiv},
+       eprint = {2206.00683},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022ApJ...932...34C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2021ApJ...918...39L,
+       author = {{Lee}, Dennis and {Berthoud}, Marc and {Chen}, Che-Yu and {Cox}, Erin G. and {Davidson}, Jacqueline A. and {Encalada}, Frankie J. and {Fissel}, Laura M. and {Harrison}, Rachel and {Kwon}, Woojin and {Li}, Di and {Li}, Zhi-Yun and {Looney}, Leslie W. and {Novak}, Giles and {Sadavoy}, Sarah and {Santos}, Fabio P. and {Segura-Cox}, Dominique and {Stephens}, Ian},
+        title = "{HAWC+/SOFIA Polarimetry in L1688: Relative Orientation of Magnetic Field and Elongated Cloud Structure}",
+      journal = {\apj},
+     keywords = {Star formation, Interstellar medium, Interstellar magnetic fields, Molecular clouds, Giant molecular clouds, 1569, 847, 845, 1072, 653, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Astrophysics of Galaxies},
+         year = 2021,
+        month = sep,
+       volume = {918},
+       number = {1},
+          eid = {39},
+        pages = {39},
+          doi = {10.3847/1538-4357/ac0cf2},
+archivePrefix = {arXiv},
+       eprint = {2106.13795},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021ApJ...918...39L},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -137,6 +123,39 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2020SPIE11453E..02W},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@INPROCEEDINGS{2020SPIE11452E..2OM,
+       author = {{Ma}, Zhiyuan and {McCrackan}, Michael and {DeNigris}, N.~S. and {Souccar}, Kamal and {Wilson}, Grant W. and {Horton}, Paul and {Lee}, Dennis and {Mauskopf}, Philip and {Novak}, Giles and {Rodr{\'\i}guez-Montoya}, Iv{\'a}n. and {Zaragoza-Cardiel}, Javier},
+        title = "{The TolTEC data analysis pipeline and software stack}",
+    booktitle = {Software and Cyberinfrastructure for Astronomy VI},
+         year = 2020,
+       editor = {{Guzman}, Juan C. and {Ibsen}, Jorge},
+       series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
+       volume = {11452},
+        month = dec,
+          eid = {114522O},
+        pages = {114522O},
+          doi = {10.1117/12.2560735},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020SPIE11452E..2OM},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{2020SPIE11453E..4AL,
+       author = {{Lunde}, Emily and {Ade}, Peter and {Berthoud}, Marc and {Contente}, Reid and {DeNigris}, N.~S. and {Doyle}, Simon and {Ferrusca}, Daniel and {Golec}, Joey and {Kuczarski}, Stephen and {Lee}, Dennis and {Ma}, Zhiyuan and {Mauskopf}, Philip and {McCrackan}, Michael and {McMahon}, Jeffrey and {Novak}, Giles and {Pisano}, Giampaolo and {Simon}, Sara and {Souccar}, Kamal and {Tucker}, Carole and {Underhill}, Matthew and {Van Camp}, Eric and {Wilson}, Grant},
+        title = "{The optical design and performance of TolTEC: a millimeter-wave imaging polarimeter}",
+    booktitle = {Millimeter, Submillimeter, and Far-Infrared Detectors and Instrumentation for Astronomy X},
+         year = 2020,
+       editor = {{Zmuidzinas}, Jonas and {Gao}, Jian-Rong},
+       series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
+       volume = {11453},
+        month = dec,
+          eid = {114534A},
+        pages = {114534A},
+          doi = {10.1117/12.2562798},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020SPIE11453E..4AL},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 
 
