add arxiv polarization spectrum paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,24 @@
 @string{aps = {American Physical Society,}}
 @string{apj = {Astrophysical Journal,}}
 
+
+@ARTICLE{2024arXiv240712917L,
+       author = {{Lee}, Dennis and {Chen}, Che-Yu and {Novak}, Giles and {Chuss}, David T. and {Cox}, Erin G. and {Karpovich}, Kaitlyn and {Ashton}, Peter and {Berthoud}, Marc and {Li}, Zhi-Yun and {Michail}, Joseph M.},
+        title = "{Modeling the Far-Infrared Polarization Spectrum of a High-Mass Star Forming Cloud}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Astrophysics of Galaxies, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2024,
+        month = jul,
+          eid = {arXiv:2407.12917},
+        pages = {arXiv:2407.12917},
+          doi = {10.48550/arXiv.2407.12917},
+archivePrefix = {arXiv},
+       eprint = {2407.12917},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024arXiv240712917L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{2024ApJ...968..101E,
        author = {{Encalada}, Frankie J. and {Looney}, Leslie W. and {Novak}, Giles and {Sadavoy}, Sarah and {Cox}, Erin G. and {Pereira-Santos}, Fabio and {Lee}, Dennis and {Harrison}, Rachel and {Pattle}, Kate},
         title = "{Magnetic Fields Observed along the East{\textendash}West Outflow of IRAS 16293-2422}",
