--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,22 +5,26 @@
 @string{apj = {Astrophysical Journal,}}
 
 
-@ARTICLE{2024arXiv240712917L,
+@ARTICLE{2024ApJ...972..102L,
        author = {{Lee}, Dennis and {Chen}, Che-Yu and {Novak}, Giles and {Chuss}, David T. and {Cox}, Erin G. and {Karpovich}, Kaitlyn and {Ashton}, Peter and {Berthoud}, Marc and {Li}, Zhi-Yun and {Michail}, Joseph M.},
-        title = "{Modeling the Far-Infrared Polarization Spectrum of a High-Mass Star Forming Cloud}",
-      journal = {arXiv e-prints},
-     keywords = {Astrophysics - Astrophysics of Galaxies, Astrophysics - Solar and Stellar Astrophysics},
+        title = "{Modeling the Far-infrared Polarization Spectrum of a High-mass Star-forming Cloud}",
+      journal = {\apj},
+     keywords = {Polarimetry, Interstellar dust, Molecular clouds, Magnetohydrodynamical simulations, Interstellar magnetic fields, 1278, 836, 1072, 1966, 845, Astrophysics - Astrophysics of Galaxies, Astrophysics - Solar and Stellar Astrophysics},
          year = 2024,
-        month = jul,
-          eid = {arXiv:2407.12917},
-        pages = {arXiv:2407.12917},
-          doi = {10.48550/arXiv.2407.12917},
+        month = sep,
+       volume = {972},
+       number = {1},
+          eid = {102},
+        pages = {102},
+          doi = {10.3847/1538-4357/ad631c},
 archivePrefix = {arXiv},
        eprint = {2407.12917},
  primaryClass = {astro-ph.GA},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2024arXiv240712917L},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024ApJ...972..102L},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+
 
 @ARTICLE{2024ApJ...968..101E,
        author = {{Encalada}, Frankie J. and {Looney}, Leslie W. and {Novak}, Giles and {Sadavoy}, Sarah and {Cox}, Erin G. and {Pereira-Santos}, Fabio and {Lee}, Dennis and {Harrison}, Rachel and {Pattle}, Kate},
