--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,7 @@
 @ARTICLE{2024ApJ...972..102L,
        author = {{Lee}, Dennis and {Chen}, Che-Yu and {Novak}, Giles and {Chuss}, David T. and {Cox}, Erin G. and {Karpovich}, Kaitlyn and {Ashton}, Peter and {Berthoud}, Marc and {Li}, Zhi-Yun and {Michail}, Joseph M.},
         title = "{Modeling the Far-infrared Polarization Spectrum of a High-mass Star-forming Cloud}",
-      journal = {\apj},
+      journal = {The Astrophysical Journal},
      keywords = {Polarimetry, Interstellar dust, Molecular clouds, Magnetohydrodynamical simulations, Interstellar magnetic fields, 1278, 836, 1072, 1966, 845, Astrophysics - Astrophysics of Galaxies, Astrophysics - Solar and Stellar Astrophysics},
          year = 2024,
         month = sep,
