--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,23 @@
 @string{aps = {American Physical Society,}}
 @string{apj = {Astrophysical Journal,}}
 
+@ARTICLE{2024arXiv240903558B,
+       author = {{Bij}, Akanksha and {Fissel}, Laura M. and {Bonne}, Lars and {Schneider}, Nicola and {Berthoud}, Marc and {Lee}, Dennis and {Novak}, Giles A. and {Sadavoy}, Sarah I. and {Pillai}, Thushara G.~S. and {Cunningham}, Maria and {Jones}, Paul and {Simon}, Robert},
+        title = "{Magnetic Field Alignment Relative to Multiple Tracers in the High-mass Star-forming Region RCW 36}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Astrophysics of Galaxies, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2024,
+        month = sep,
+          eid = {arXiv:2409.03558},
+        pages = {arXiv:2409.03558},
+          doi = {10.48550/arXiv.2409.03558},
+archivePrefix = {arXiv},
+       eprint = {2409.03558},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024arXiv240903558B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @ARTICLE{2024ApJ...972..102L,
        author = {{Lee}, Dennis and {Chen}, Che-Yu and {Novak}, Giles and {Chuss}, David T. and {Cox}, Erin G. and {Karpovich}, Kaitlyn and {Ashton}, Peter and {Berthoud}, Marc and {Li}, Zhi-Yun and {Michail}, Joseph M.},
