--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,20 +4,22 @@
 @string{aps = {American Physical Society,}}
 @string{apj = {Astrophysical Journal,}}
 
-@ARTICLE{2024arXiv240903558B,
+@ARTICLE{2024ApJ...975..267B,
        author = {{Bij}, Akanksha and {Fissel}, Laura M. and {Bonne}, Lars and {Schneider}, Nicola and {Berthoud}, Marc and {Lee}, Dennis and {Novak}, Giles A. and {Sadavoy}, Sarah I. and {Pillai}, Thushara G.~S. and {Cunningham}, Maria and {Jones}, Paul and {Simon}, Robert},
         title = "{Magnetic Field Alignment Relative to Multiple Tracers in the High-mass Star-forming Region RCW 36}",
-      journal = {arXiv e-prints},
-     keywords = {Astrophysics - Astrophysics of Galaxies, Astrophysics - Solar and Stellar Astrophysics},
+      journal = {\apj},
+     keywords = {Star formation, Star forming regions, Interstellar medium, Interstellar magnetic fields, H II regions, Photodissociation regions, Molecular clouds, 1569, 1565, 847, 845, 694, 1223, 1072, Astrophysics - Astrophysics of Galaxies, Astrophysics - Solar and Stellar Astrophysics},
          year = 2024,
-        month = sep,
-          eid = {arXiv:2409.03558},
-        pages = {arXiv:2409.03558},
-          doi = {10.48550/arXiv.2409.03558},
+        month = nov,
+       volume = {975},
+       number = {2},
+          eid = {267},
+        pages = {267},
+          doi = {10.3847/1538-4357/ad77c7},
 archivePrefix = {arXiv},
        eprint = {2409.03558},
  primaryClass = {astro-ph.GA},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2024arXiv240903558B},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024ApJ...975..267B},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
