--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,7 @@
 @ARTICLE{2024ApJ...975..267B,
        author = {{Bij}, Akanksha and {Fissel}, Laura M. and {Bonne}, Lars and {Schneider}, Nicola and {Berthoud}, Marc and {Lee}, Dennis and {Novak}, Giles A. and {Sadavoy}, Sarah I. and {Pillai}, Thushara G.~S. and {Cunningham}, Maria and {Jones}, Paul and {Simon}, Robert},
         title = "{Magnetic Field Alignment Relative to Multiple Tracers in the High-mass Star-forming Region RCW 36}",
-      journal = {\apj},
+      journal = {The Astrophysical Journal},
      keywords = {Star formation, Star forming regions, Interstellar medium, Interstellar magnetic fields, H II regions, Photodissociation regions, Molecular clouds, 1569, 1565, 847, 845, 694, 1223, 1072, Astrophysics - Astrophysics of Galaxies, Astrophysics - Solar and Stellar Astrophysics},
          year = 2024,
         month = nov,
