add polarization spectrum paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,22 @@
 @string{aps = {American Physical Society,}}
 @string{apj = {Astrophysical Journal,}}
 
+@ARTICLE{2025ApJ...981..132C,
+       author = {{Cox}, Erin G. and {Novak}, Giles and {Chuss}, David T. and {Lee}, Dennis and {Berthoud}, Marc and {Karpovich}, Kaitlyn and {Michail}, Joseph M. and {Li}, Zhi-Yun and {Ashton}, Peter C.},
+        title = "{SOFIA Polarization Spectrum of Three Star-forming Clouds}",
+      journal = {\apj},
+     keywords = {Star formation, Star forming regions, Far infrared astronomy, Polarimetry, Interstellar magnetic fields, Protostars, Young stellar objects, 1569, 1565, 529, 1278, 845, 1302, 1834},
+         year = 2025,
+        month = mar,
+       volume = {981},
+       number = {2},
+          eid = {132},
+        pages = {132},
+          doi = {10.3847/1538-4357/ada447},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025ApJ...981..132C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{2024ApJ...975..267B,
        author = {{Bij}, Akanksha and {Fissel}, Laura M. and {Bonne}, Lars and {Schneider}, Nicola and {Berthoud}, Marc and {Lee}, Dennis and {Novak}, Giles A. and {Sadavoy}, Sarah I. and {Pillai}, Thushara G.~S. and {Cunningham}, Maria and {Jones}, Paul and {Simon}, Robert},
         title = "{Magnetic Field Alignment Relative to Multiple Tracers in the High-mass Star-forming Region RCW 36}",
@@ -196,8 +212,3 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2020SPIE11453E..4AL},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
-
-
-
-
-
