--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,13 +1,10 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-@string{apj = {Astrophysical Journal,}}
-
 @ARTICLE{2025ApJ...981..132C,
        author = {{Cox}, Erin G. and {Novak}, Giles and {Chuss}, David T. and {Lee}, Dennis and {Berthoud}, Marc and {Karpovich}, Kaitlyn and {Michail}, Joseph M. and {Li}, Zhi-Yun and {Ashton}, Peter C.},
         title = "{SOFIA Polarization Spectrum of Three Star-forming Clouds}",
-      journal = {\apj},
+      journal = {The Astrophysical Journal},
      keywords = {Star formation, Star forming regions, Far infrared astronomy, Polarimetry, Interstellar magnetic fields, Protostars, Young stellar objects, 1569, 1565, 529, 1278, 845, 1302, 1834},
          year = 2025,
         month = mar,
