updated cv + publications

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,48 @@
 ---
 ---
 
+@ARTICLE{2025arXiv250811746L,
+       author = {{Lee}, Dennis and {Hensley}, Brandon S. and {Chang}, Tzu-Ching and {Dor{\'e}}, Olivier},
+        title = "{The End of the Road for Far-infrared Reddening Maps? Evidence for Reddening Errors Driven by Changes in PAH Abundance}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics of Galaxies},
+         year = 2025,
+        month = aug,
+          eid = {arXiv:2508.11746},
+        pages = {arXiv:2508.11746},
+     abstract = "{Accurate correction for extinction by Galactic dust is essential for
+        studying the extragalactic sky. In the low-extinction regions of
+        the Ursa Major molecular cloud complex, we demonstrate that
+        Galactic dust reddening maps constructed from observations of
+        far-infrared emission are insensitive to variations in the
+        abundance of polycyclic aromatic hydrocarbons (PAHs), and, as a
+        result, to PAH-induced variations in reddening. Using galaxy
+        counts to validate various reddening maps, we find evidence that
+        maps based on far-infrared emission erroneously under-predict
+        reddening compared to stellar reddening maps. This
+        underestimation by far-infrared emission based reddening maps --
+        representing the largest discrepancy between maps of up to
+        $E(B-V)=0.08$ mag -- is correlated with the relative brightness
+        of PAH emission. Furthermore, we demonstrate theoretically that
+        changes in PAH abundance via accretion from the gas phase is
+        capable of altering extinction significantly with only minor
+        changes to far-infrared emission. We show that modeling the
+        extinction of Ursa Major using both far-infrared and mid-
+        infrared emission more accurately traces dust extinction
+        variations due to changes in PAH abundance. Finally, we discuss
+        how SPHEREx observations of the 3.3 $μ$m PAH feature are a
+        promising way to overcome this limitation of far-infrared
+        emission.}",
+          doi = {10.48550/arXiv.2508.11746},
+archivePrefix = {arXiv},
+       eprint = {2508.11746},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv250811746L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{2025ApJ...981..132C,
        author = {{Cox}, Erin G. and {Novak}, Giles and {Chuss}, David T. and {Lee}, Dennis and {Berthoud}, Marc and {Karpovich}, Kaitlyn and {Michail}, Joseph M. and {Li}, Zhi-Yun and {Ashton}, Peter C.},
         title = "{SOFIA Polarization Spectrum of Three Star-forming Clouds}",
